// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ErrorAlarmMonitor – alarm list state > DOM snapshot – dark mode (with alarms) 1`] = `
<div
  style="width: 100%; max-width: 100%; margin: 28px 0px; box-sizing: border-box; background: rgba(15, 23, 42, 0.82); border-radius: 18px; padding: 20px 22px 18px; box-shadow: 0 16px 40px rgba(2,6,23,0.38); transition: border-color 0.4s ease; border: 1px solid rgba(239, 68, 68, 0.32);"
>
  <div
    style="display: flex; align-items: center; justify-content: space-between; margin-bottom: 16px; flex-wrap: wrap; gap: 8px;"
  >
    <div
      style="display: flex; align-items: center; gap: 10px;"
    >
      <span
        style="font-size: 22px;"
      >
        🛡️
      </span>
      <div>
        <h2
          style="color: rgb(241, 245, 249); font-size: 18px; font-weight: 800; margin: 0px; letter-spacing: -0.3px;"
        >
          Fehler- & Alarmmonitor
        </h2>
        <div
          style="font-size: 11px; color: rgb(100, 116, 139); margin-top: 2px;"
        >
          Zuletzt aktualisiert: 
          10:00:00
        </div>
      </div>
    </div>
    <div
      style="display: flex; gap: 6px;"
    >
      <span
        style="display: inline-flex; align-items: center; gap: 4px; border-radius: 20px; padding: 3px 10px; font-size: 12px; font-weight: 700; color: rgb(239, 68, 68); transition: all 0.3s ease; background: rgba(239, 68, 68, 0.08); border: 1px solid rgba(239, 68, 68, 0.25);"
      >
        🔴
         
        1
      </span>
      <span
        style="display: inline-flex; align-items: center; gap: 4px; border-radius: 20px; padding: 3px 10px; font-size: 12px; font-weight: 700; color: rgb(245, 158, 11); transition: all 0.3s ease; background: rgba(245, 158, 11, 0.08); border: 1px solid rgba(245, 158, 11, 0.25);"
      >
        🟡
         
        1
      </span>
      <span
        style="display: inline-flex; align-items: center; gap: 4px; border-radius: 20px; padding: 3px 10px; font-size: 12px; font-weight: 700; color: rgb(56, 189, 248); transition: all 0.3s ease; background: rgba(56, 189, 248, 0.07); border: 1px solid rgba(56, 189, 248, 0.22);"
      >
        🔵
         
        1
      </span>
    </div>
  </div>
  <div
    style="display: flex; align-items: center; gap: 8px; margin-bottom: 16px; background: rgba(2, 6, 23, 0.5); border-radius: 10px; padding: 8px 14px; border: 1px solid rgba(71, 85, 105, 0.25);"
  >
    <span
      style="display: inline-block; width: 8px; height: 8px; border-radius: 50%; box-shadow: 0 0 6px #ef4444; animation: pulse 2s infinite; background: rgb(239, 68, 68);"
    />
    <span
      style="font-size: 13px; color: rgb(148, 163, 184); font-weight: 500;"
    >
      1 Fehler · 1 Warnungen · 1 Hinweise
    </span>
  </div>
  <ul
    style="list-style: none; padding: 0px; margin: 0px;"
  >
    <li
      style="margin-bottom: 10px; padding: 14px 16px; border-radius: 12px; background: rgba(239, 68, 68, 0.08); border: 1px solid rgba(239, 68, 68, 0.25); color: rgb(241, 245, 249);"
    >
      <div
        style="display: flex; justify-content: space-between; align-items: flex-start; gap: 8px; flex-wrap: wrap;"
      >
        <div
          style="display: flex; align-items: center; gap: 8px;"
        >
          <span
            style="font-size: 16px;"
          >
            🔴
          </span>
          <span
            style="background: rgb(127, 29, 29); color: rgb(239, 68, 68); font-size: 11px; font-weight: 700; padding: 2px 8px; border-radius: 20px; border: 1px solid rgba(239, 68, 68, 0.25); text-transform: uppercase; letter-spacing: 0.5px;"
          >
            Fehler
          </span>
        </div>
        <span
          style="font-size: 11px; color: rgb(100, 116, 139);"
        >
          01.06., 12:00
        </span>
      </div>
      <div
        style="margin-top: 8px; font-size: 14px; font-weight: 600; color: rgb(241, 245, 249);"
      >
        Batterie-Überspannung erkannt
      </div>
      <div
        style="margin-top: 6px; font-size: 13px; color: rgb(251, 191, 36); display: flex; gap: 6px; align-items: flex-start;"
      >
        <span>
          💡
        </span>
        <span>
          Batterie vom Netz trennen
        </span>
      </div>
    </li>
    <li
      style="margin-bottom: 10px; padding: 14px 16px; border-radius: 12px; background: rgba(245, 158, 11, 0.08); border: 1px solid rgba(245, 158, 11, 0.25); color: rgb(241, 245, 249);"
    >
      <div
        style="display: flex; justify-content: space-between; align-items: flex-start; gap: 8px; flex-wrap: wrap;"
      >
        <div
          style="display: flex; align-items: center; gap: 8px;"
        >
          <span
            style="font-size: 16px;"
          >
            🟡
          </span>
          <span
            style="background: rgb(120, 53, 15); color: rgb(245, 158, 11); font-size: 11px; font-weight: 700; padding: 2px 8px; border-radius: 20px; border: 1px solid rgba(245, 158, 11, 0.25); text-transform: uppercase; letter-spacing: 0.5px;"
          >
            Warnung
          </span>
        </div>
        <span
          style="font-size: 11px; color: rgb(100, 116, 139);"
        >
          01.06., 12:05
        </span>
      </div>
      <div
        style="margin-top: 8px; font-size: 14px; font-weight: 600; color: rgb(241, 245, 249);"
      >
        Solarertrag unter Erwartung
      </div>
    </li>
    <li
      style="margin-bottom: 0px; padding: 14px 16px; border-radius: 12px; background: rgba(56, 189, 248, 0.07); border: 1px solid rgba(56, 189, 248, 0.22); color: rgb(241, 245, 249);"
    >
      <div
        style="display: flex; justify-content: space-between; align-items: flex-start; gap: 8px; flex-wrap: wrap;"
      >
        <div
          style="display: flex; align-items: center; gap: 8px;"
        >
          <span
            style="font-size: 16px;"
          >
            🔵
          </span>
          <span
            style="background: rgb(12, 74, 110); color: rgb(56, 189, 248); font-size: 11px; font-weight: 700; padding: 2px 8px; border-radius: 20px; border: 1px solid rgba(56, 189, 248, 0.22); text-transform: uppercase; letter-spacing: 0.5px;"
          >
            Info
          </span>
        </div>
        <span
          style="font-size: 11px; color: rgb(100, 116, 139);"
        >
          01.06., 12:10
        </span>
      </div>
      <div
        style="margin-top: 8px; font-size: 14px; font-weight: 600; color: rgb(241, 245, 249);"
      >
        Software-Update verfügbar
      </div>
    </li>
  </ul>
  <div
    style="display: flex; justify-content: flex-end; margin-top: 16px; gap: 8px;"
  >
    <button
      style="display: inline-flex; align-items: center; gap: 6px; background: rgba(239, 68, 68, 0.12); border: 1px solid rgba(239, 68, 68, 0.3); color: rgb(252, 165, 165); border-radius: 10px; padding: 7px 14px; font-size: 13px; font-weight: 600; cursor: pointer; transition: all 0.2s ease;"
    >
      🔕 Benachrichtigungen aus
    </button>
  </div>
</div>
`;

exports[`ErrorAlarmMonitor – alarm list state > DOM snapshot – light mode (with alarms) 1`] = `
<div
  style="width: 100%; max-width: 100%; margin: 28px 0px; box-sizing: border-box; background: rgba(15, 23, 42, 0.82); border-radius: 18px; padding: 20px 22px 18px; box-shadow: 0 16px 40px rgba(2,6,23,0.38); transition: border-color 0.4s ease; border: 1px solid rgba(239, 68, 68, 0.32);"
>
  <div
    style="display: flex; align-items: center; justify-content: space-between; margin-bottom: 16px; flex-wrap: wrap; gap: 8px;"
  >
    <div
      style="display: flex; align-items: center; gap: 10px;"
    >
      <span
        style="font-size: 22px;"
      >
        🛡️
      </span>
      <div>
        <h2
          style="color: rgb(241, 245, 249); font-size: 18px; font-weight: 800; margin: 0px; letter-spacing: -0.3px;"
        >
          Fehler- & Alarmmonitor
        </h2>
        <div
          style="font-size: 11px; color: rgb(100, 116, 139); margin-top: 2px;"
        >
          Zuletzt aktualisiert: 
          10:00:00
        </div>
      </div>
    </div>
    <div
      style="display: flex; gap: 6px;"
    >
      <span
        style="display: inline-flex; align-items: center; gap: 4px; border-radius: 20px; padding: 3px 10px; font-size: 12px; font-weight: 700; color: rgb(239, 68, 68); transition: all 0.3s ease; background: rgba(239, 68, 68, 0.08); border: 1px solid rgba(239, 68, 68, 0.25);"
      >
        🔴
         
        1
      </span>
      <span
        style="display: inline-flex; align-items: center; gap: 4px; border-radius: 20px; padding: 3px 10px; font-size: 12px; font-weight: 700; color: rgb(245, 158, 11); transition: all 0.3s ease; background: rgba(245, 158, 11, 0.08); border: 1px solid rgba(245, 158, 11, 0.25);"
      >
        🟡
         
        1
      </span>
      <span
        style="display: inline-flex; align-items: center; gap: 4px; border-radius: 20px; padding: 3px 10px; font-size: 12px; font-weight: 700; color: rgb(56, 189, 248); transition: all 0.3s ease; background: rgba(56, 189, 248, 0.07); border: 1px solid rgba(56, 189, 248, 0.22);"
      >
        🔵
         
        1
      </span>
    </div>
  </div>
  <div
    style="display: flex; align-items: center; gap: 8px; margin-bottom: 16px; background: rgba(2, 6, 23, 0.5); border-radius: 10px; padding: 8px 14px; border: 1px solid rgba(71, 85, 105, 0.25);"
  >
    <span
      style="display: inline-block; width: 8px; height: 8px; border-radius: 50%; box-shadow: 0 0 6px #ef4444; animation: pulse 2s infinite; background: rgb(239, 68, 68);"
    />
    <span
      style="font-size: 13px; color: rgb(148, 163, 184); font-weight: 500;"
    >
      1 Fehler · 1 Warnungen · 1 Hinweise
    </span>
  </div>
  <ul
    style="list-style: none; padding: 0px; margin: 0px;"
  >
    <li
      style="margin-bottom: 10px; padding: 14px 16px; border-radius: 12px; background: rgba(239, 68, 68, 0.08); border: 1px solid rgba(239, 68, 68, 0.25); color: rgb(241, 245, 249);"
    >
      <div
        style="display: flex; justify-content: space-between; align-items: flex-start; gap: 8px; flex-wrap: wrap;"
      >
        <div
          style="display: flex; align-items: center; gap: 8px;"
        >
          <span
            style="font-size: 16px;"
          >
            🔴
          </span>
          <span
            style="background: rgb(127, 29, 29); color: rgb(239, 68, 68); font-size: 11px; font-weight: 700; padding: 2px 8px; border-radius: 20px; border: 1px solid rgba(239, 68, 68, 0.25); text-transform: uppercase; letter-spacing: 0.5px;"
          >
            Fehler
          </span>
        </div>
        <span
          style="font-size: 11px; color: rgb(100, 116, 139);"
        >
          01.06., 12:00
        </span>
      </div>
      <div
        style="margin-top: 8px; font-size: 14px; font-weight: 600; color: rgb(241, 245, 249);"
      >
        Batterie-Überspannung erkannt
      </div>
      <div
        style="margin-top: 6px; font-size: 13px; color: rgb(251, 191, 36); display: flex; gap: 6px; align-items: flex-start;"
      >
        <span>
          💡
        </span>
        <span>
          Batterie vom Netz trennen
        </span>
      </div>
    </li>
    <li
      style="margin-bottom: 10px; padding: 14px 16px; border-radius: 12px; background: rgba(245, 158, 11, 0.08); border: 1px solid rgba(245, 158, 11, 0.25); color: rgb(241, 245, 249);"
    >
      <div
        style="display: flex; justify-content: space-between; align-items: flex-start; gap: 8px; flex-wrap: wrap;"
      >
        <div
          style="display: flex; align-items: center; gap: 8px;"
        >
          <span
            style="font-size: 16px;"
          >
            🟡
          </span>
          <span
            style="background: rgb(120, 53, 15); color: rgb(245, 158, 11); font-size: 11px; font-weight: 700; padding: 2px 8px; border-radius: 20px; border: 1px solid rgba(245, 158, 11, 0.25); text-transform: uppercase; letter-spacing: 0.5px;"
          >
            Warnung
          </span>
        </div>
        <span
          style="font-size: 11px; color: rgb(100, 116, 139);"
        >
          01.06., 12:05
        </span>
      </div>
      <div
        style="margin-top: 8px; font-size: 14px; font-weight: 600; color: rgb(241, 245, 249);"
      >
        Solarertrag unter Erwartung
      </div>
    </li>
    <li
      style="margin-bottom: 0px; padding: 14px 16px; border-radius: 12px; background: rgba(56, 189, 248, 0.07); border: 1px solid rgba(56, 189, 248, 0.22); color: rgb(241, 245, 249);"
    >
      <div
        style="display: flex; justify-content: space-between; align-items: flex-start; gap: 8px; flex-wrap: wrap;"
      >
        <div
          style="display: flex; align-items: center; gap: 8px;"
        >
          <span
            style="font-size: 16px;"
          >
            🔵
          </span>
          <span
            style="background: rgb(12, 74, 110); color: rgb(56, 189, 248); font-size: 11px; font-weight: 700; padding: 2px 8px; border-radius: 20px; border: 1px solid rgba(56, 189, 248, 0.22); text-transform: uppercase; letter-spacing: 0.5px;"
          >
            Info
          </span>
        </div>
        <span
          style="font-size: 11px; color: rgb(100, 116, 139);"
        >
          01.06., 12:10
        </span>
      </div>
      <div
        style="margin-top: 8px; font-size: 14px; font-weight: 600; color: rgb(241, 245, 249);"
      >
        Software-Update verfügbar
      </div>
    </li>
  </ul>
  <div
    style="display: flex; justify-content: flex-end; margin-top: 16px; gap: 8px;"
  >
    <button
      style="display: inline-flex; align-items: center; gap: 6px; background: rgba(239, 68, 68, 0.12); border: 1px solid rgba(239, 68, 68, 0.3); color: rgb(252, 165, 165); border-radius: 10px; padding: 7px 14px; font-size: 13px; font-weight: 600; cursor: pointer; transition: all 0.2s ease;"
    >
      🔕 Benachrichtigungen aus
    </button>
  </div>
</div>
`;

exports[`ErrorAlarmMonitor – clean state (no alarms) > DOM snapshot – dark mode (no alarms) — catches structural regressions 1`] = `
<div
  style="width: 100%; max-width: 100%; margin: 28px 0px; box-sizing: border-box; background: rgba(15, 23, 42, 0.82); border: 1px solid rgba(34, 197, 94, 0.28); border-radius: 18px; padding: 20px 22px 18px; box-shadow: 0 16px 40px rgba(2,6,23,0.38); transition: border-color 0.4s ease;"
>
  <div
    style="display: flex; align-items: center; justify-content: space-between; margin-bottom: 16px; flex-wrap: wrap; gap: 8px;"
  >
    <div
      style="display: flex; align-items: center; gap: 10px;"
    >
      <span
        style="font-size: 22px;"
      >
        🛡️
      </span>
      <div>
        <h2
          style="color: rgb(241, 245, 249); font-size: 18px; font-weight: 800; margin: 0px; letter-spacing: -0.3px;"
        >
          Fehler- & Alarmmonitor
        </h2>
        <div
          style="font-size: 11px; color: rgb(100, 116, 139); margin-top: 2px;"
        >
          Zuletzt aktualisiert: 
          10:00:00
        </div>
      </div>
    </div>
    <div
      style="display: flex; gap: 6px;"
    >
      <span
        style="display: inline-flex; align-items: center; gap: 4px; background: rgba(30, 41, 59, 0.6); border: 1px solid rgba(71, 85, 105, 0.3); border-radius: 20px; padding: 3px 10px; font-size: 12px; font-weight: 700; color: rgb(71, 85, 105); transition: all 0.3s ease;"
      >
        🔴
         
        0
      </span>
      <span
        style="display: inline-flex; align-items: center; gap: 4px; background: rgba(30, 41, 59, 0.6); border: 1px solid rgba(71, 85, 105, 0.3); border-radius: 20px; padding: 3px 10px; font-size: 12px; font-weight: 700; color: rgb(71, 85, 105); transition: all 0.3s ease;"
      >
        🟡
         
        0
      </span>
      <span
        style="display: inline-flex; align-items: center; gap: 4px; background: rgba(30, 41, 59, 0.6); border: 1px solid rgba(71, 85, 105, 0.3); border-radius: 20px; padding: 3px 10px; font-size: 12px; font-weight: 700; color: rgb(71, 85, 105); transition: all 0.3s ease;"
      >
        🔵
         
        0
      </span>
    </div>
  </div>
  <div
    style="display: flex; align-items: center; gap: 8px; margin-bottom: 16px; background: rgba(2, 6, 23, 0.5); border-radius: 10px; padding: 8px 14px; border: 1px solid rgba(71, 85, 105, 0.25);"
  >
    <span
      style="display: inline-block; width: 8px; height: 8px; border-radius: 50%; background: rgb(34, 197, 94); box-shadow: 0 0 6px #22c55e; animation: pulse 2s infinite;"
    />
    <span
      style="font-size: 13px; color: rgb(148, 163, 184); font-weight: 500;"
    >
      System läuft einwandfrei – keine aktiven Alarme
    </span>
  </div>
  <div
    style="text-align: center; padding: 32px 16px; background: rgba(34, 197, 94, 0.05); border: 1px dashed rgba(34, 197, 94, 0.2); border-radius: 12px;"
  >
    <div
      style="font-size: 44px; margin-bottom: 10px;"
    >
      ✅
    </div>
    <div
      style="color: rgb(34, 197, 94); font-weight: 700; font-size: 16px; margin-bottom: 6px;"
    >
      Alles in Ordnung
    </div>
    <div
      style="color: rgb(100, 116, 139); font-size: 13px; max-width: 320px; margin: 0px auto;"
    >
      Keine aktuellen Fehler oder Warnungen. Das System überwacht alle Komponenten kontinuierlich.
    </div>
  </div>
  <div
    style="display: flex; justify-content: flex-end; margin-top: 16px; gap: 8px;"
  >
    <button
      style="display: inline-flex; align-items: center; gap: 6px; background: rgba(239, 68, 68, 0.12); border: 1px solid rgba(239, 68, 68, 0.3); color: rgb(252, 165, 165); border-radius: 10px; padding: 7px 14px; font-size: 13px; font-weight: 600; cursor: pointer; transition: all 0.2s ease;"
    >
      🔕 Benachrichtigungen aus
    </button>
  </div>
</div>
`;

exports[`ErrorAlarmMonitor – clean state (no alarms) > DOM snapshot – light mode (no alarms) 1`] = `
<div
  style="width: 100%; max-width: 100%; margin: 28px 0px; box-sizing: border-box; background: rgba(15, 23, 42, 0.82); border: 1px solid rgba(34, 197, 94, 0.28); border-radius: 18px; padding: 20px 22px 18px; box-shadow: 0 16px 40px rgba(2,6,23,0.38); transition: border-color 0.4s ease;"
>
  <div
    style="display: flex; align-items: center; justify-content: space-between; margin-bottom: 16px; flex-wrap: wrap; gap: 8px;"
  >
    <div
      style="display: flex; align-items: center; gap: 10px;"
    >
      <span
        style="font-size: 22px;"
      >
        🛡️
      </span>
      <div>
        <h2
          style="color: rgb(241, 245, 249); font-size: 18px; font-weight: 800; margin: 0px; letter-spacing: -0.3px;"
        >
          Fehler- & Alarmmonitor
        </h2>
        <div
          style="font-size: 11px; color: rgb(100, 116, 139); margin-top: 2px;"
        >
          Zuletzt aktualisiert: 
          10:00:00
        </div>
      </div>
    </div>
    <div
      style="display: flex; gap: 6px;"
    >
      <span
        style="display: inline-flex; align-items: center; gap: 4px; background: rgba(30, 41, 59, 0.6); border: 1px solid rgba(71, 85, 105, 0.3); border-radius: 20px; padding: 3px 10px; font-size: 12px; font-weight: 700; color: rgb(71, 85, 105); transition: all 0.3s ease;"
      >
        🔴
         
        0
      </span>
      <span
        style="display: inline-flex; align-items: center; gap: 4px; background: rgba(30, 41, 59, 0.6); border: 1px solid rgba(71, 85, 105, 0.3); border-radius: 20px; padding: 3px 10px; font-size: 12px; font-weight: 700; color: rgb(71, 85, 105); transition: all 0.3s ease;"
      >
        🟡
         
        0
      </span>
      <span
        style="display: inline-flex; align-items: center; gap: 4px; background: rgba(30, 41, 59, 0.6); border: 1px solid rgba(71, 85, 105, 0.3); border-radius: 20px; padding: 3px 10px; font-size: 12px; font-weight: 700; color: rgb(71, 85, 105); transition: all 0.3s ease;"
      >
        🔵
         
        0
      </span>
    </div>
  </div>
  <div
    style="display: flex; align-items: center; gap: 8px; margin-bottom: 16px; background: rgba(2, 6, 23, 0.5); border-radius: 10px; padding: 8px 14px; border: 1px solid rgba(71, 85, 105, 0.25);"
  >
    <span
      style="display: inline-block; width: 8px; height: 8px; border-radius: 50%; background: rgb(34, 197, 94); box-shadow: 0 0 6px #22c55e; animation: pulse 2s infinite;"
    />
    <span
      style="font-size: 13px; color: rgb(148, 163, 184); font-weight: 500;"
    >
      System läuft einwandfrei – keine aktiven Alarme
    </span>
  </div>
  <div
    style="text-align: center; padding: 32px 16px; background: rgba(34, 197, 94, 0.05); border: 1px dashed rgba(34, 197, 94, 0.2); border-radius: 12px;"
  >
    <div
      style="font-size: 44px; margin-bottom: 10px;"
    >
      ✅
    </div>
    <div
      style="color: rgb(34, 197, 94); font-weight: 700; font-size: 16px; margin-bottom: 6px;"
    >
      Alles in Ordnung
    </div>
    <div
      style="color: rgb(100, 116, 139); font-size: 13px; max-width: 320px; margin: 0px auto;"
    >
      Keine aktuellen Fehler oder Warnungen. Das System überwacht alle Komponenten kontinuierlich.
    </div>
  </div>
  <div
    style="display: flex; justify-content: flex-end; margin-top: 16px; gap: 8px;"
  >
    <button
      style="display: inline-flex; align-items: center; gap: 6px; background: rgba(239, 68, 68, 0.12); border: 1px solid rgba(239, 68, 68, 0.3); color: rgb(252, 165, 165); border-radius: 10px; padding: 7px 14px; font-size: 13px; font-weight: 600; cursor: pointer; transition: all 0.2s ease;"
    >
      🔕 Benachrichtigungen aus
    </button>
  </div>
</div>
`;
